# TEMPO_PyRSIG_GUI

./: .gitignore  README.md  batch_import_test.csv  codebase_dump.txt  dump_for_ai.sh  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
src/: TempoAnalyzer.spec  launcher.py
src/tempo_app/: __init__.py  flet_dir.txt  main.py
src/tempo_app/core/: __init__.py  batch_parser.py  batch_scheduler.py  chart_executor.py  chart_generator.py  chart_intent.py  column_exporter.py  config.py  constants.py  df_converter.py  downloader.py  exporter.py  geo_utils.py  plotter.py  processor.py  status.py  variable_registry.py
src/tempo_app/core/nodes/: __init__.py  base.py  pipeline.py  source_nodes.py  spatial_nodes.py  temporal_nodes.py  transform_nodes.py
src/tempo_app/storage/: __init__.py  database.py  models.py
src/tempo_app/ui/: __init__.py  shell.py  theme.py
src/tempo_app/ui/components/: __init__.py  column_lane.py  map_selector.py  node_widgets.py  stack_editor.py  widgets.py
src/tempo_app/ui/pages/: __init__.py  ai_analysis.py  batch_import.py  create.py  export.py  inspect.py  library.py  plot.py  settings.py  workspace.py
tests/: conftest.py  test_database.py  test_downloader.py  test_exporter.py  test_integration.py  test_models.py  test_plotter.py  test_processor.py
