[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempo-analyzer"
version = "1.0.0"
description = "TEMPO NASA Satellite Data Analysis Tool - Desktop Application"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TEMPO Analyzer Team"}
]
keywords = ["tempo", "nasa", "satellite", "no2", "hcho", "air-quality", "flet"]
classifiers = [
    "Development Status :: 4 - Beta",

    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    # UI Framework
    "flet>=0.21.0",
    
    # Data Processing
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "xarray>=2023.1.0",
    "netcdf4>=1.6.0",
    
    # NASA RSIG API
    "pyrsig>=0.8.0",
    
    # Plotting & Mapping
    "matplotlib>=3.7.0",
    "cartopy>=0.22.0",
    "pyproj>=3.6.0",
    "pillow>=10.0.0",
    
    # Excel Export
    "xlsxwriter>=3.1.0",
    
    # HTTP & File Handling
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
tempo-analyzer = "tempo_app.main:main"

[project.gui-scripts]
tempo-analyzer-gui = "tempo_app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tempo_app"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
